[package]
name = "dlparkimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlparkimg"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.6"
pyo3 = "0.19"
dlpark = { git = "https://github.com/SunDoge/dlpark.git", rev = "c340518" }
